# osconfiglib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: test.toml  test1.toml
osconfiglib/: layers.py  package_handler.py  utils.py  virt_customize.py
osconfiglib/cli/: main.py
tests/: test_layers.py  test_utils.py
tests/cli/: test_main.py
