[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "osconfiglib"
version = "0.1.0"
description = "Library for image configuration"
authors = ["Brandon Geraci <brandon.geraci@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
